--- a/CV.html
+++ b/CV.html
@@ -43,10 +43,10 @@
 <!-- 1er Bloc -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Curriculum vitae</h3>
-  <img src="./CV_Gabriel_Roelens.pdf" width="620px" height="877px">
+  <img src="CV_Gabriel_Roelens.pdf" width="620px" height="877px">
 </iframe>
   <h3>
-    <input type="button" class="btn-default" value="Télécharger" onclick="window.location='./CV_Gabriel_Roelens_1_page-0001.jpg'">
+    <input type="button" class="btn-default" value="Télécharger" onclick="window.location='CV_Gabriel_Roelens.pdf'">
   </h3>
 </div>
 
