--- a/Competences.html
+++ b/Competences.html
@@ -44,7 +44,7 @@
   <div class="row">
     <div class="col-sm-4">
       <p>HTML / CSS /JS</p>
-      <img src="https://gabriel-roelens-portfolio.w3spaces.com/kindpng_2547396.png" style="display:inline" alt="htmlcssjs" width="350" height="200">
+      <img src="./img/522e6bc1a11d1726a35f81cbd979395f.jpg" style="display:inline" alt="htmlcssjs" width="350" height="200">
     </div>
     <div class="col-sm-4"> 
       <p>Configuration Switchs / Routeurs</p>
