--- a/Competences.html
+++ b/Competences.html
@@ -48,7 +48,7 @@
     </div>
     <div class="col-sm-4"> 
       <p>Configuration Switchs / Routeurs</p>
-      <img src="https://gabriel-roelens-portfolio.w3spaces.com/6671901.png" style="display:inline" alt="config" width="200" height="200">
+      <img src="./img/6671901.png" style="display:inline" alt="config" width="200" height="200">
     </div>
     <div class="col-sm-4"> 
       <p>Config Terminal linux / cmd Windows</p>
