--- a/Competences.html
+++ b/Competences.html
@@ -43,8 +43,8 @@
   <h3 class="margin">Compétences aquises</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>HTML / CSS /JS</p>
-      <img src="./img/522e6bc1a11d1726a35f81cbd979395f.jpg" style="display:inline" alt="htmlcssjs" width="350" height="200">
+      <p>HTML / CSS</p>
+      <img src="./img/522e6bc1a11d1726a35f81cbd979395f.jpg" style="display:inline" alt="htmlcss" width="350" height="200">
     </div>
     <div class="col-sm-4"> 
       <p>Configuration Switchs / Routeurs</p>
