--- a/Competences.html
+++ b/Competences.html
@@ -44,7 +44,7 @@
   <div class="row">
     <div class="col-sm-4">
       <p>HTML / CSS</p>
-      <img src="./img/522e6bc1a11d1726a35f81cbd979395f.jpg" style="display:inline" alt="htmlcss" width="350" height="200">
+      <img src="./img/PinClipart.com_vanilla-extract-clipart_3922412.png" style="display:inline" alt="htmlcss" width="350" height="200">
     </div>
     <div class="col-sm-4"> 
       <p>Configuration Switchs / Routeurs</p>
