--- a/rapport.html
+++ b/rapport.html
@@ -21,7 +21,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                         
+        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>                  
       </button>
       <a class="navbar-brand" href="#">Portfolio de Gabriel Roelens</a>
     </div>
@@ -32,6 +33,7 @@
         <li><a href="Competences.html">Compétences</a></li>
         <li><a href="CV.html">Curriculum vitae</a></li>
         <li><a href="Veille.html">Veille informatique</a></li>
+        <li><a href="rapport.html">Rapport de stage</a></li>
       </ul>
     </div>
   </div>
