--- a/Projets.html
+++ b/Projets.html
@@ -22,7 +22,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                         
+        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>                  
       </button>
       <a class="navbar-brand" href="#">Portfolio de Gabriel Roelens</a>
     </div>
@@ -33,12 +34,11 @@
         <li><a href="Competences.html">Compétences</a></li>
         <li><a href="CV.html">Curriculum vitae</a></li>
         <li><a href="Veille.html">Veille informatique</a></li>
+        <li><a href="rapport.html">Rapport de stage</a></li>
       </ul>
     </div>
   </div>
 </nav>
-
-
 
 <!-- 1er Bloc -->
 <div class="container-fluid bg-1 text-center">
