--- a/rapport.html
+++ b/rapport.html
@@ -43,8 +43,7 @@
 <!-- 1er Bloc -->
 <div class="container-fluid bg-1 text-center">
     <h3 class="margin">Rapport de stage de 2ème année</h3>
-    <img src="./img/pngwing.com.png" style="display:inline" alt="vmware" width="200" height="200">
-    <img src="./img/icons8-cisco-paquet-traceur-100.png" style="display:inline" alt="pt" width="200" height="200">
+    <img src="./img/132020378_4116201521727456_5000230575154314352_n.jpg" style="display:inline" alt="axians" width="200" height="200">
     <h3>Chez Axians Amiens</h3>
     <h3>Vinci Energies</h3>
   </div>
