--- a/CV.html
+++ b/CV.html
@@ -44,11 +44,12 @@
 
 <!-- 1er Bloc -->
 <div class="container-fluid bg-1 text-center">
-    <h3 class="margin">Curriculum vitae</h3>
-    <iframe src="./img/CV_Gabriel_Roelens.pdf" width="620px" height="877px" style="border: none;"></iframe>
-    <h3>
-        <input type="button" class="btn btn-default" value="Télécharger" onclick="window.location.href='./img/CV_Gabriel_Roelens.pdf'">
-    </h3>
+  <h3 class="margin">Curriculum vitae</h3>
+  <img src="./img/CV_Gabriel_Roelens.pdf" alt="cv" width="620px" height="877px">
+</iframe>
+  <h3>
+    <input type="button" class="btn-default" value="Télécharger" onclick="window.location='CV_Gabriel_Roelens.pdf'">
+  </h3>
 </div>
  
 <!-- Pied de page -->
