--- a/CV.html
+++ b/CV.html
@@ -45,8 +45,9 @@
 <!-- 1er Bloc -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Curriculum vitae</h3>
-  <img> src="./CV_Gabriel_Roelens.pdf" alt="cv" width="620px" height="877px">
-</img>
+ <iframe>
+  <img src="./CV_Gabriel_Roelens.pdf" alt="cv" width="620px" height="877px">
+</iframe>
   <h3>
     <input type="button" class="btn-default" value="Télécharger" onclick="window.location='CV_Gabriel_Roelens.pdf'">
   </h3>
