--- a/CV.html
+++ b/CV.html
@@ -45,8 +45,8 @@
 <!-- 1er Bloc -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Curriculum vitae</h3>
- 
-   <iframe src="./CV_Gabriel_Roelens.pdf" width="620px" height="877px" style="border: none;"></iframe>
+
+<iframe src="https://docs.google.com/viewer?url=https://gabric0.github.io/portfolio/CV_Gabriel_Roelens.pdf&embedded=true" width="620px" height="877px" style="border: none;"></iframe>
 
   <h3>
     <input type="button" class="btn-default" value="Télécharger" onclick="window.location='CV_Gabriel_Roelens.pdf'">
