--- a/Projets.html
+++ b/Projets.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <!-- Thème trouvé sur www.w3schools.com - No Copyright -->
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<link rel="stylesheet" type="text/css" href="styles.css" /> 
+  <link rel="stylesheet" type="text/css" href="styles.css" /> 
 </head>
 <body>
 
@@ -48,13 +48,75 @@
   <h3>BTS SIO 2ème année</h3>
 </div>
 
+<!-- Projet 1 -->
+<div class="container-fluid bg-3 text-center">    
+  <h3 class="margin">Projet 1</h3><br>
+  <div class="row">
+    <div class="col-sm-2">
+      <p>Projet 1 - 01</p>
+      <input type="button" class="btn-default" value="Afficher le Projet 1-01" onclick="window.location='./Projet1_01.pdf'">
+    </div>
+    <div class="col-sm-2">
+      <p>Projet 1 - 02</p>
+      <input type="button" class="btn-default" value="Afficher le Projet 1-02" onclick="window.location='./Projet1_02.pdf'">
+    </div>
+    <div class="col-sm-2">
+      <p>Projet 1 - 03</p>
+      <input type="button" class="btn-default" value="Afficher le Projet 1-03" onclick="window.location='./Projet1_03.pdf'">
+    </div>
+    <div class="col-sm-2">
+      <p>Projet 1 - 04</p>
+      <input type="button" class="btn-default" value="Afficher le Projet 1-04" onclick="window.location='./Projet1_04.pdf'">
+    </div>
+    <div class="col-sm-2">
+      <p>Projet 1 - 05</p>
+      <input type="button" class="btn-default" value="Afficher le Projet 1-05" onclick="window.location='./Projet1_05.pdf'">
+    </div>
+    <div class="col-sm-2">
+      <p>Projet 1 - 06</p>
+      <input type="button" class="btn-default" value="Afficher le Projet 1-06" onclick="window.location='./Projet1_06.pdf'">
+    </div>
+  </div>
+</div>
+
+<!-- Projet 2 -->
+<div class="container-fluid bg-3 text-center">    
+  <h3 class="margin">Projet 2</h3><br>
+  <div class="row">
+    <div class="col-sm-2">
+      <p>Projet 2 - 01</p>
+      <input type="button" class="btn-default" value="Afficher le Projet 2-01" onclick="window.location='./Projet2_01.pdf'">
+    </div>
+    <div class="col-sm-2">
+      <p>Projet 2 - 02</p>
+      <input type="button" class="btn-default" value="Afficher le Projet 2-02" onclick="window.location='./Projet2_02.pdf'">
+    </div>
+    <div class="col-sm-2">
+      <p>Projet 2 - 03</p>
+      <input type="button" class="btn-default" value="Afficher le Projet 2-03" onclick="window.location='./Projet2_03.pdf'">
+    </div>
+    <div class="col-sm-2">
+      <p>Projet 2 - 04</p>
+      <input type="button" class="btn-default" value="Afficher le Projet 2-04" onclick="window.location='./Projet2_04.pdf'">
+    </div>
+    <div class="col-sm-2">
+      <p>Projet 2 - 05</p>
+      <input type="button" class="btn-default" value="Afficher le Projet 2-05" onclick="window.location='./Projet2_05.pdf'">
+    </div>
+    <div class="col-sm-2">
+      <p>Projet 2 - 06</p>
+      <input type="button" class="btn-default" value="Afficher le Projet 2-06" onclick="window.location='./Projet2_06.pdf'">
+    </div>
+  </div>
+</div>
+
 <!-- 2nd Bloc -->
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">Projets faits en BTS SIO</h3><br>
   <div class="row">
     <div class="col-sm-4">
       <p>TP 01 Réseau Local sur Packet Tracer</p>
-          <input type="button" class="btn-default" value="Afficher le TP" onclick="window.location='./TP03_Reseau_Client-Serveur_v3roelens.pdf'">
+      <input type="button" class="btn-default" value="Afficher le TP" onclick="window.location='./TP03_Reseau_Client-Serveur_v3roelens.pdf'">
     </div>
     <div class="col-sm-4"> 
       <p>TP 02 : Config paramètres initiaux</p>
@@ -92,5 +154,3 @@
 
 <script src="script.js"></script>
 
-</body>
-</html>
