--- a/Projets.html
+++ b/Projets.html
@@ -52,62 +52,70 @@
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">Projet 1</h3><br>
   <div class="row">
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <p>Projet 1 - 01</p>
       <input type="button" class="btn-default" value="Afficher le Projet 1-01" onclick="window.location='./Projet1_01.pdf'">
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <p>Projet 1 - 02</p>
       <input type="button" class="btn-default" value="Afficher le Projet 1-02" onclick="window.location='./Projet1_02.pdf'">
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <p>Projet 1 - 03</p>
       <input type="button" class="btn-default" value="Afficher le Projet 1-03" onclick="window.location='./Projet1_03.pdf'">
     </div>
-    <div class="col-sm-2">
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-4">
       <p>Projet 1 - 04</p>
       <input type="button" class="btn-default" value="Afficher le Projet 1-04" onclick="window.location='./Projet1_04.pdf'">
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <p>Projet 1 - 05</p>
       <input type="button" class="btn-default" value="Afficher le Projet 1-05" onclick="window.location='./Projet1_05.pdf'">
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <p>Projet 1 - 06</p>
       <input type="button" class="btn-default" value="Afficher le Projet 1-06" onclick="window.location='./Projet1_06.pdf'">
     </div>
   </div>
+  <br>
 </div>
 
 <!-- Projet 2 -->
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">Projet 2</h3><br>
   <div class="row">
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <p>Projet 2 - 01</p>
       <input type="button" class="btn-default" value="Afficher le Projet 2-01" onclick="window.location='./Projet2_01.pdf'">
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <p>Projet 2 - 02</p>
       <input type="button" class="btn-default" value="Afficher le Projet 2-02" onclick="window.location='./Projet2_02.pdf'">
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <p>Projet 2 - 03</p>
       <input type="button" class="btn-default" value="Afficher le Projet 2-03" onclick="window.location='./Projet2_03.pdf'">
     </div>
-    <div class="col-sm-2">
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-4">
       <p>Projet 2 - 04</p>
       <input type="button" class="btn-default" value="Afficher le Projet 2-04" onclick="window.location='./Projet2_04.pdf'">
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <p>Projet 2 - 05</p>
       <input type="button" class="btn-default" value="Afficher le Projet 2-05" onclick="window.location='./Projet2_05.pdf'">
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <p>Projet 2 - 06</p>
       <input type="button" class="btn-default" value="Afficher le Projet 2-06" onclick="window.location='./Projet2_06.pdf'">
     </div>
   </div>
+  <br>
 </div>
 
 <!-- 2nd Bloc -->
@@ -148,8 +156,8 @@
 
 <!-- Pied de page -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Mail : gabriel.roelens@saint-remi.net
-  <p>Tel : 07 80 57 14 76
+  <p>Mail : gabriel.roelens@saint-remi.net</p>
+  <p>Tel : 07 80 57 14 76</p>
 </footer>
 
 <script src="script.js"></script>
